--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 ###########################################################
-### Welcome to Beautiful Jekyll!
-### This config file is meant for settings that affect your entire website. When you first
-### set up your website you should go through all these settings and edit them, but after
-### the initial set up you won't need to come back to this file often.
+### 
+### 
+### 
+### 
 ###########################################################
 
 ############################
@@ -10,21 +10,16 @@
 ############################
 
 # Name of website
-title: My Website
+title: ePortfolio
 
 # Your name to show in the footer
-author: Some Person
+author: Kateryna Burkova
 
-###############################################
-# --- List of links in the navigation bar --- #
-###############################################
+###################################################################
+# --- Thank you for taking your time to look at my ePortfolio --- #
+###################################################################
 
-navbar-links:
-  About Me: "aboutme"
-  Resources:
-    - Beautiful Jekyll: "https://beautifuljekyll.com"
-    - Learn markdown: "https://www.markdowntutorial.com/"
-  Author's home: "https://deanattali.com"
+
 
 ################
 # --- Logo --- #
@@ -32,7 +27,7 @@ navbar-links:
 
 # Image to show in the navigation bar - works best with a square image
 # Remove this parameter if you don't want an image in the navbar
-avatar: "/assets/img/avatar-icon.png"
+avatar: "/assets/img/title.png"
 
 # By default, the image is cut into a circle. You can disable this behaviour by setting 'round-avatar: false'
 round-avatar: true
