--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-###########################################################
+u###########################################################
 ### 
 ### 
 ### 
@@ -44,37 +44,37 @@ round-avatar: true
 # Select the social network links that you want to show in the footer.
 # Uncomment the links you want to show and add your information to each one.
 social-network-links:
-  email: "someone@example.com"
+  email: "kateburkova@gmail.com"
   rss: true  # remove this line if you don't want to show an RSS link at the bottom
   facebook: deanattali
   github: daattali
   twitter: daattali
   patreon: DeanAttali
   youtube: c/daattali
-#  medium: yourname
-#  reddit: yourname
+#  medium: KaterynaBurkova
+#  reddit: KaterynaBurkova
 #  linkedin: daattali
 #  xing: yourname
 #  stackoverflow: "3943160/daattali"
 #  snapchat: deanat78
 #  instagram: deanat78
-#  spotify: yourname
+#  spotify: KaterynaBurkova
 #  telephone: +14159998888
 #  steam: deanat78
-#  twitch: yourname
-#  yelp: yourname
-#  telegram: yourname
-#  calendly: yourname
+#  twitch: KaterynaBurkova
+#  yelp: KaterynaBurkova
+#  telegram: KaterynaBurkova
+#  calendly: KaterynaBurkova
 #  mastodon: instance.url/@username
 #  ORCID: your ORCID ID
 #  google-scholar: your google scholar
 #  discord: invite/invite_code or users/userid 
-#  kaggle: yourname
-#  hackerrank: yourname
+#  kaggle: KaterynaBurkova
+#  hackerrank: KaterynaBurkova
 
 # If you want your website to generate an RSS feed, provide a description
-# The URL for the feed will be https://<your_website>/feed.xml
-rss-description: This website is a virtual proof that I'm awesome
+# The URL for the feed will be https://<KaterynaBurkova>/feed.xml
+
 
 ###########################
 # --- General options --- #
@@ -89,7 +89,7 @@ share-links-active:
 
 # How to display the link to your website in the footer
 # Remove this if you don't want a link in the footer
-url-pretty: "MyWebsite.com"
+url-pretty: "KaterynaBurkova.com"
 
 # Excerpt word length - Truncate the excerpt of each post on the feed page to the specified number of words
 excerpt_length: 50
